...
            android:text="Event Name"
            android:fontFamily="@font/bold1"
            android:textSize="18sp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/attendeeCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold1"
            android:text="Attendee Count: 0"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eventAdapterQrButton"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:elevation="2dp"

                android:text="Qr code"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewMapButton"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:elevation="2dp"

                android:text="Check map"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pdfButton"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:elevation="2dp"
                android:text="PDF"
...
                    android:text="Event QR Code"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/eventQrView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:visibility="gone"/>
            </LinearLayout>

...
        </LinearLayout>

    </LinearLayout>


    <ImageButton
        android:id="@+id/expandButton"
        android:layout_width="34dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:background="#0000"
        android:padding="10dp"
...
